Generator initial implementation